--- a/articles/active-directory/hybrid/index.yml
+++ b/articles/active-directory/hybrid/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.subservice: na
   ms.topic: landing-page
   services: active-directory
-  ms.openlocfilehash: b2596145f500d3bc3c08c754abdb3703501dc4d9
-  ms.sourcegitcommit: f98ab5af0fa17a9bba575286c588af36ff075615
+  ms.openlocfilehash: 5c2b9168ad2dcd25e0d99997f17a8ea4cc891eea
+  ms.sourcegitcommit: c94a177b11a850ab30f406edb233de6923ca742a
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/25/2020
-  ms.locfileid: "85356553"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "89278507"
 landingContent:
 - title: 关于混合标识
   linkLists:
@@ -54,7 +54,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: 确定哪种身份验证方法适合你
-      url: /azure/security/fundamentals/choose-ad-authn
+      url: ./choose-ad-authn.md
 - title: 混合标识入门
   linkLists:
   - linkListType: how-to-guide
