--- a/articles/azure-resource-manager/custom-providers/toc.yml
+++ b/articles/azure-resource-manager/custom-providers/toc.yml
@@ -21,11 +21,6 @@
       href: tutorial-custom-providers-create.md
     - name: 扩展资源
       href: tutorial-resource-onboarding.md
-- name: 示例
-  items:
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 用于关联的 Azure Policy
@@ -50,6 +45,9 @@
       href: /rest/api/customproviders/
     - name: Azure CLI
       href: /cli/azure/ext/custom-providers/custom-providers/
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: Azure 路线图
