--- a/articles/azure-sql/toc.yml
+++ b/articles/azure-sql/toc.yml
@@ -633,9 +633,6 @@
           href: database/powershell-script-content-guide.md?tabs=single-database
         - name: Azure 资源管理器
           href: database/arm-templates-content-guide.md?tabs=single-database
-        - name: Azure Policy 内置策略定义
-          displayName: 'samples, policies, definitions'
-          href: ./database/policy-samples.md
         - name: 代码示例
           href: 'https://azure.microsoft.com/resources/samples/?service=sql-database'
 - name: SQL 托管实例 (SQL MI)
@@ -911,9 +908,6 @@
           href: database/powershell-script-content-guide.md?tabs=managed-instance
         - name: Azure 资源管理器
           href: database/arm-templates-content-guide.md?tabs=managed-instance
-        - name: Azure Policy 内置策略定义
-          displayName: 'samples, policies, definitions'
-          href: ./database/policy-samples.md
         - name: 代码示例
           href: 'https://azure.microsoft.com/resources/samples/?service=sql-database'
 - name: Azure VM 上的 SQL Server
@@ -1080,6 +1074,9 @@
               href: 'https://docs.microsoft.com/sql/connect/sql-connection-libraries'
             - name: REST
               href: /rest/api/
+            - name: Azure Policy 内置策略定义
+              displayName: 'samples, policies, definitions'
+              href: ./database/policy-reference.md
         - name: 资源
           items:
             - name: 常见问题解答
@@ -1180,6 +1177,9 @@
           href: /sql/connect/python/python-driver-for-sql-server
         - name: Ruby
           href: /sql/connect/ruby/ruby-driver-for-sql-server
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./database/policy-reference.md
 - name: 资源
   items:
     - name: 利用 Microsoft Learn 掌握技能
@@ -1198,7 +1198,7 @@
       href: 'https://social.msdn.microsoft.com/Forums/home?forum=ssdsgetstarted'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/sql-azure'
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 连接错误
           href: database/troubleshoot-common-errors-issues.md
