--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -44,9 +44,6 @@
           href: 'https://github.com/Azure/azure-batch-samples'
     - name: Azure CLI
       href: cli-samples.md
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 安全性
@@ -268,6 +265,9 @@
           href: batch-task-complete-event.md
         - name: 任务失败事件
           href: batch-task-fail-event.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: Azure 更新
