--- a/articles/databox/index.yml
+++ b/articles/databox/index.yml
@@ -3,7 +3,7 @@ title: Azure Data Box 文档 - 脱机传输
 summary: 受到时间、网络或成本限制时，请使用 Azure Data Box 设备进行脱机数据传输。 请根据你的数据大小从 Data Box Disk、Data Box 或 Data Box Heavy 中进行选择。
 metadata:
   title: Azure Data Box 文档 - 脱机传输
-  description: 受到时间、网络或成本限制时，请使用 Azure Data Box 设备进行脱机数据传输。
+  description: 探索 Azure Data Box，它是一种用于将数据脱机迁移到云端的存储设备。 详细了解使用安全专用存储设备进行的数据传输服务。
   services: databox
   ms.service: databox
   ms.subservice: pod
@@ -12,12 +12,14 @@ metadata:
   author: alkohli
   ms.author: alkohli
   ms.date: 08/16/2019
-  ms.openlocfilehash: 2c42ee93804eb1e0e24b0b67925a092cc8517ceb
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.custom: seo-azure-migrate
+  keywords: cloud data transfer, data migration to cloud, azure data box, data transfer service, data transfer services, azure data transfer
+  ms.openlocfilehash: be5571d44f86d5ba12f604088ca5aab19a973b85
+  ms.sourcegitcommit: 3fb5e772f8f4068cc6d91d9cde253065a7f265d6
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "69650371"
+  ms.lasthandoff: 08/31/2020
+  ms.locfileid: "89177068"
 landingContent:
 - title: 关于 Data Box 系列
   linkLists:
