--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -4,6 +4,10 @@
   items:
     - name: 什么是 ExpressRoute？
       href: expressroute-introduction.md
+- name: 快速入门
+  items:
+    - name: 创建 ExpressRoute 线路 - ARM 模板
+      href: quickstart-create-expressroute-vnet-template.md
 - name: 教程
   items:
     - name: 创建和修改线路
@@ -201,7 +205,7 @@
           href: expressroute-asymmetric-routing.md
         - name: 用于 ExpressRoute 的 NAT
           href: expressroute-nat.md
-    - name: 疑难解答
+    - name: 故障排除
       items:
         - name: 验证 ExpressRoute 连接
           href: expressroute-troubleshooting-expressroute-overview.md
