--- a/articles/governance/management-groups/index.yml
+++ b/articles/governance/management-groups/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 06/29/2020
-  ms.openlocfilehash: d27bb0be6698a6b92c459143604ad2ebeb00b728
-  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
+  ms.date: 08/31/2020
+  ms.openlocfilehash: a2d736b2706b3b0958bb544c6d0e4434c78e6791
+  ms.sourcegitcommit: d68c72e120bdd610bb6304dad503d3ea89a1f0f7
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/30/2020
-  ms.locfileid: "85551874"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "89231327"
 landingContent:
 - title: 关于 Azure 治理
   linkLists:
@@ -29,14 +29,26 @@ landingContent:
     links:
     - text: Azure 管理组
       url: ./overview.md
-- title: 组织资源
+- title: 入门
   linkLists:
+  - linkListType: quickstart
+    links:
+    - text: 创建管理组（门户）
+      url: ./create-management-group-portal.md
+    - text: 创建管理组 (Azure CLI)
+      url: ./create-management-group-azure-cli.md
+    - text: 创建管理组 (Azure PowerShell)
+      url: ./create-management-group-powershell.md
+    - text: 创建管理组 (REST)
+      url: ./create-management-group-rest-api.md
+    - text: 向管理组部署资源（ARM 模板）
+      url: ../../azure-resource-manager/templates/deploy-to-management-group.md
   - linkListType: how-to-guide
     links:
-    - text: 创建管理组
-      url: ./create.md
-    - text: 管理资源
+    - text: 管理资源层次结构
       url: ./manage.md
+    - text: 保护资源层次结构
+      url: ./how-to/protect-resource-hierarchy.md
 - title: 参考
   linkLists:
   - linkListType: reference
