--- a/articles/governance/management-groups/toc.yml
+++ b/articles/governance/management-groups/toc.yml
@@ -7,12 +7,25 @@
       href: ../azure-management.md
     - name: 管理组
       href: ./overview.md
+- name: 快速入门
+  expanded: true
+  items:
+    - name: 创建管理组 - 门户
+      displayName: hierarchy
+      href: ./create-management-group-portal.md
+    - name: 创建管理组 - Azure CLI
+      displayName: hierarchy
+      href: ./create-management-group-azure-cli.md
+    - name: 创建管理组 - Azure PowerShell
+      displayName: hierarchy
+      href: ./create-management-group-powershell.md
+    - name: 创建管理组 - REST
+      displayName: hierarchy
+      href: ./create-management-group-rest-api.md
 - name: 操作指南
   expanded: true
   items:
-    - name: 创建管理组
-      href: ./create.md
-    - name: 管理资源
+    - name: 管理资源层次结构
       href: ./manage.md
     - name: 保护资源层次结构
       href: ./how-to/protect-resource-hierarchy.md
