--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -10,9 +10,6 @@
     - name: 索引
       displayName: 'template, sample'
       href: ./samples/index.md
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./samples/policy-samples.md
 - name: 概念
   items:
     - name: Azure 委派资源管理
@@ -95,6 +92,9 @@
       href: /rest/api/managedservices/
     - name: OpenAPI
       href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/managedservices/resource-manager/Microsoft.ManagedServices/preview/2018-06-01-preview'
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./samples/policy-reference.md
 - name: 资源
   items:
     - name: 有关 Azure Lighthouse 的 Microsoft Q&A
