--- a/articles/migrate/index.yml
+++ b/articles/migrate/index.yml
@@ -3,19 +3,21 @@ title: Azure Migrate 文档
 summary: 查找相关文章，了解如何使用 Azure Migrate 中心内的工具来发现、评估和迁移本地环境。
 metadata:
   title: Azure Migrate 文档
-  description: 了解如何使用 Azure Migrate 中心内的工具来发现、评估本地环境并将它迁移到 Azure。
+  description: 查找 Azure 迁移教程、资源和迁移评估工具。 了解如何使用 Azure Migrate 中心内的工具来发现、评估本地环境并将它迁移到 Azure。
   ms.service: azure-migrate
   ms.topic: landing-page
   ms.collection: collection
   author: rayne-wiselman
   ms.author: raynew
   ms.date: 07/08/2020
-  ms.openlocfilehash: a3c9be5e123892d5d1b8d8e4a0677eb520e34dc6
-  ms.sourcegitcommit: d7008edadc9993df960817ad4c5521efa69ffa9f
+  ms.custom: seo-azure-migrate
+  keywords: azure migrate, azure migration, azure migrate assessment tool, azure migrate tool, azure migrate documentation, azure migration documentation
+  ms.openlocfilehash: b38df4b4a9c9cd0741e9bc4d69e42ebaf2feefb7
+  ms.sourcegitcommit: d68c72e120bdd610bb6304dad503d3ea89a1f0f7
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/08/2020
-  ms.locfileid: "86112657"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "89228335"
 landingContent:
 - title: 关于 Azure Migrate
   linkLists:
