--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -74,9 +74,6 @@
       href: sample-scripts-azure-cli.md
     - name: Java 连接池
       href: sample-scripts-java-connection-pooling.md
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 数据库和服务器
@@ -332,6 +329,9 @@
       href: /azure/templates/microsoft.dbformysql/allversions
     - name: 管理存储过程
       href: reference-stored-procedures.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: 部署模板
