--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -166,6 +166,8 @@
       href: /cli/azure/ext/desktopvirtualization/?view=azure-cli-latest
     - name: Azure 示例方案
       href: /azure/architecture/example-scenario/wvd/windows-virtual-desktop
+    - name: 电子邮件发现
+      href: /windows-server/remote/remote-desktop-services/rds-email-discovery
 - name: 资源
   items:
     - name: PowerShell
