--- a/articles/active-directory/managed-identities-azure-resources/TOC.yml
+++ b/articles/active-directory/managed-identities-azure-resources/TOC.yml
@@ -43,17 +43,17 @@
         - name: 访问 Azure Cosmos DB
           href: tutorial-linux-vm-access-cosmos-db.md
         - name: 访问 Azure 容器注册表
-          href: /azure/container-registry/container-registry-authentication-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+          href: ../../container-registry/container-registry-authentication-managed-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
         - name: 使用用户分配的托管标识访问 Azure 资源管理器
           href: msi-tutorial-linux-vm-access-arm.md
     - name: Azure 服务总线
-      href: /azure/service-bus-messaging/service-bus-managed-service-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+      href: ../../service-bus-messaging/service-bus-managed-service-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
     - name: Azure 应用服务和 Functions
-      href: /azure/app-service/overview-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+      href: ../../app-service/overview-managed-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
     - name: Azure 事件中心
-      href: /azure/event-hubs/authenticate-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+      href: ../../event-hubs/authenticate-managed-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
     - name: Azure 容器实例
-      href: /azure/container-instances/container-instances-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+      href: ../../container-instances/container-instances-managed-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
 - name: 概念
   items:
     - name: 托管标识和 Azure VM
@@ -68,7 +68,7 @@
           href: qs-configure-cli-windows-vm.md
         - name: PowerShell
           href: qs-configure-powershell-windows-vm.md
-        - name: Azure 资源管理器模板
+        - name: Azure Resource Manager 模板
           href: qs-configure-template-windows-vm.md
         - name: REST
           href: qs-configure-rest-vm.md
@@ -82,7 +82,7 @@
           href: qs-configure-cli-windows-vmss.md
         - name: PowerShell
           href: qs-configure-powershell-windows-vmss.md
-        - name: Azure 资源管理器模板
+        - name: Azure Resource Manager 模板
           href: qs-configure-template-windows-vmss.md
         - name: REST
           href: qs-configure-rest-vmss.md
@@ -112,7 +112,7 @@
           href: how-to-manage-ua-identity-cli.md
         - name: PowerShell
           href: how-to-manage-ua-identity-powershell.md
-        - name: Azure 资源管理器模板
+        - name: Azure Resource Manager 模板
           href: how-to-manage-ua-identity-arm.md
         - name: REST
           href: how-to-manage-ua-identity-rest.md
@@ -127,13 +127,13 @@
 - name: 参考
   items:
     - name: .NET
-      href: 'https://docs.microsoft.com/dotnet/api/overview/azure/identity-readme?view=azure-dotnet'
+      href: /dotnet/api/overview/azure/identity-readme?view=azure-dotnet
     - name: Java
-      href: 'https://docs.microsoft.com/java/api/overview/azure/identity-readme?view=azure-java-stable'
+      href: /java/api/overview/azure/identity-readme?view=azure-java-stable
     - name: JavaScript
-      href: 'https://docs.microsoft.com/javascript/api/overview/azure/identity-readme?view=azure-node-latest'
+      href: /javascript/api/overview/azure/identity-readme?view=azure-node-latest
     - name: Python
-      href: 'https://docs.microsoft.com/python/api/overview/azure/identity-readme?view=azure-python'
+      href: /python/api/overview/azure/identity-readme?view=azure-python
     - name: Go
       href: 'https://golang.org/doc/'
 - name: 资源
