--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -593,6 +593,8 @@
           href: fastly-edge-cloud-tutorial.md
         - name: FCM HUB
           href: fcm-hub-tutorial.md
+        - name: Fexa
+          href: fexa-tutorial.md
         - name: 字段 ID
           href: field-id-tutorial.md
         - name: Fidelity NetBenefits
@@ -927,8 +929,6 @@
           href: kantegassoforjira-tutorial.md
         - name: Keeper Password Manager & Digital Vault
           href: keeperpasswordmanager-tutorial.md
-        - name: Kemp LoadMaster
-          href: kemp-tutorial.md
         - name: Khoros Care
           href: khoros-care-tutorial.md
         - name: Kindling
@@ -1665,8 +1665,6 @@
           href: tickitlms-learn-tutorial.md
         - name: Tidemark
           href: tidemark-tutorial.md
-        - name: TigerConnect Secure Messenger
-          href: tigertext-tutorial.md
         - name: TimeLive
           href: timelive-tutorial.md
         - name: TimeOffManager
