--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -79,9 +79,6 @@
       href: samples-powershell.md
     - name: 资源管理器模板
       href: samples-resource-manager-templates.md
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
     - name: Terraform
       href: samples-terraform.md
 - name: 概念
@@ -285,6 +282,9 @@
       href: /rest/api/appservice/
     - name: 资源管理器模板
       href: /azure/templates/microsoft.web/allversions
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: 应用服务博客
