--- a/articles/azure-arc/servers/toc.yml
+++ b/articles/azure-arc/servers/toc.yml
@@ -4,6 +4,8 @@
   items:
     - name: 关于已启用 Azure Arc 的服务器
       href: overview.md
+    - name: Connected Machine 代理的新增功能
+      href: agent-release-notes.md
 - name: 快速入门
   items:
     - name: 启用支持 Arc 的服务器代理
