--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -49,7 +49,7 @@
   items:
     - name: 故障转移和修补
       href: cache-failover.md
-    - name: 最佳做法
+    - name: 最佳实践
       href: cache-best-practices.md
     - name: 安全性
       items:
@@ -161,7 +161,8 @@
     - name: 资源管理器模板
       href: /azure/templates/microsoft.cache/allversions
     - name: Azure Policy 内置策略定义
-      href: ./policy-samples.md
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
     - name: Redis 命令
       href: 'https://redis.io/commands#'
 - name: 资源
