--- a/articles/azure-resource-manager/managed-applications/toc.yml
+++ b/articles/azure-resource-manager/managed-applications/toc.yml
@@ -25,9 +25,6 @@
       href: powershell-samples.md
     - name: 托管应用程序解决方案
       href: sample-projects.md
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 视图定义项目
@@ -157,6 +154,9 @@
               href: microsoft-storage-multistorageaccountcombo.md
             - name: StorageAccountSelector
               href: microsoft-storage-storageaccountselector.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: Azure 路线图
