--- a/articles/azure-resource-manager/management/toc.yml
+++ b/articles/azure-resource-manager/management/toc.yml
@@ -4,11 +4,6 @@
   items:
     - name: 什么是资源管理器？
       href: overview.md
-- name: 示例
-  items:
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 订阅和服务限制
@@ -17,8 +12,6 @@
       href: resource-name-rules.md
     - name: 资源管理器部署和经典部署
       href: deployment-models.md
-    - name: Azure 的常见安全属性
-      href: azure-resource-manager-security-controls.md
     - name: 按服务分类的资源提供程序
       href: azure-services-resource-providers.md
     - name: 扩展资源类型
@@ -30,6 +23,8 @@
         - name: Azure Policy 的安全控件
           displayName: 'regulatory, compliance, standards, domains'
           href: ./security-controls-policy.md
+        - name: Azure 的常见安全属性
+          href: azure-resource-manager-security-controls.md
 - name: 如何
   items:
     - name: 移动 - 资源组/订阅
@@ -172,6 +167,9 @@
       href: /java/api/com.microsoft.azure.management.resources
     - name: Python
       href: /python/api/overview/azure/resources?view=azure-python
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: Azure 路线图
