--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -35,11 +35,6 @@
               href: container-registry-tutorial-deploy-app.md
             - name: 3 - 更新 Web 应用程序
               href: container-registry-tutorial-deploy-update.md
-    - name: 示例
-      items:
-        - name: Azure Policy 内置策略定义
-          displayName: 'samples, policies, definitions'
-          href: ./policy-samples.md
     - name: 概念
       expanded: false
       items:
@@ -243,6 +238,9 @@
       href: ../event-grid/event-schema-container-registry.md?toc=/azure/container-registry/toc.json&bc=/azure/container-registry/breadcrumb/toc.json
     - name: 运行状况检查错误
       href: container-registry-health-error-reference.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   expanded: false
   items:
