--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -83,9 +83,6 @@
       href: cli-samples.md
     - name: Azure 资源管理器
       href: resource-manager-samples.md
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: NoSQL 数据库与关系数据库
@@ -1305,6 +1302,11 @@
       displayName: ARM
     - name: 模拟器发行说明
       href: local-emulator-release-notes.md
+- name: 参考
+  items:
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: 利用 Microsoft Learn 掌握技能
