--- a/articles/data-lake-analytics/TOC.yml
+++ b/articles/data-lake-analytics/TOC.yml
@@ -18,11 +18,6 @@
       href: data-lake-analytics-get-started-powershell.md
     - name: Azure CLI
       href: data-lake-analytics-get-started-cli.md
-- name: 示例
-  items:
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 安全性
@@ -164,6 +159,9 @@
       href: /azure/templates/microsoft.datalakeanalytics/allversions
     - name: Azure CLI
       href: 'https://docs.microsoft.com/cli/azure/dla'
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: Azure Data Lake 博客
