--- a/articles/data-lake-store/TOC.yml
+++ b/articles/data-lake-store/TOC.yml
@@ -22,11 +22,6 @@
       href: data-lake-store-get-started-powershell.md
     - name: 使用 Azure CLI
       href: data-lake-store-get-started-cli-2.0.md
-- name: 示例
-  items:
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 如何
   items:
     - name: 加载和移动数据
@@ -177,6 +172,9 @@
       href: /azure/templates/microsoft.datalakestore/allversions
     - name: Azure CLI
       href: 'https://docs.microsoft.com/cli/azure/dls'
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: Azure 路线图
