--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -94,8 +94,6 @@
       href: template-samples.md
     - name: 代码示例
       href: /samples/browse/?term=Event+Grid
-    - name: Azure Policy 内置策略定义
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 事件网格术语
@@ -296,6 +294,9 @@
           href: /azure/templates/microsoft.eventgrid/topics
     - name: SDK
       href: sdk-overview.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: 利用 Microsoft Learn 掌握技能
