--- a/articles/key-vault/secrets/toc.yml
+++ b/articles/key-vault/secrets/toc.yml
@@ -46,9 +46,6 @@
   items:
     - name: Key Vault 代码示例
       href: 'https://docs.microsoft.com/samples/browse/?expanded=azure&products=azure-key-vault'
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ../policy-samples.md?toc=/azure/key-vault/secrets/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
 - name: 参考
   items:
     - name: Azure PowerShell
@@ -68,6 +65,9 @@
     - name: 资源管理器模板
       href: /azure/templates/microsoft.keyvault/allversions
       displayName: ARM
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ../policy-reference.md?toc=/azure/key-vault/secrets/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
 - name: 资源
   items:
     - name: 利用 Microsoft Learn 掌握技能
