--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -34,9 +34,6 @@
       href: /samples/browse/?products=azure-logic-apps
     - name: 资源管理器快速启动模板
       href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Logic'
-    - name: Azure Policy 内置策略定义
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 适用于逻辑应用的连接器
@@ -396,6 +393,9 @@
           href: logic-apps-track-integration-account-x12-tracking-schema.md
         - name: 自定义跟踪架构
           href: logic-apps-track-integration-account-custom-tracking-schema.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: 资源
   items:
     - name: 利用 Microsoft Learn 掌握技能
