--- a/articles/private-link/toc.yml
+++ b/articles/private-link/toc.yml
@@ -46,7 +46,9 @@
       href: disable-private-link-service-network-policy.md
     - name: 管理专用终结点
       href: manage-private-endpoint.md
-    - name: 疑难解答
+    - name: 使用 Azure 防火墙检查流量
+      href: inspect-traffic-with-azure-firewall.md
+    - name: 故障排除
       items:
         - name: 排查专用终结点连接问题
           href: troubleshoot-private-endpoint-connectivity.md
@@ -90,5 +92,5 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-virtual-network'
-    - name: 常见问题解答
+    - name: 常见问题
       href: private-link-faq.md
