--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -40,7 +40,7 @@
               href: connect-aws.md
             - name: Azure Active Directory
               href: connect-azure-active-directory.md
-            - name: Office 365
+            - name: Office 365（现带有 Teams！）
               href: connect-office-365.md
             - name: Cloud App Security
               href: connect-cloud-app-security.md
@@ -54,6 +54,8 @@
               href: connect-microsoft-defender-advanced-threat-protection.md
             - name: Azure ATP
               href: connect-azure-atp.md
+            - name: Azure 防火墙
+              href: connect-azure-firewall.md
             - name: Azure 安全中心
               href: connect-azure-security-center.md
             - name: 适用于 IoT 的 Azure 安全中心
